--- a/style.css
+++ b/style.css
@@ -33,28 +33,30 @@ html {
 }
 
 #title h1 {
-    font-size: 65px;
+    font-size: 4vw;
     font-weight: 200;
     margin: 0;
     padding: 0;
 }
 
 #title h2 {
-    margin: 0 30px;
+    font-size: 1.5vw;
+    margin: 0;
     padding: 0;
     font-weight: 400;
 }
 
 #title a {
-    margin: 20px 100px; 
+    margin: 1vw 5vw; 
     padding: 0; 
     text-align: center;
     border: 2px solid black;
     border-radius: 10px;
     font-weight: 200;
-    width: 300px;
+    width: 20vw;
     color: black;
     text-decoration: none;
+    font-size: 1vw;
 }
 
 #title a:hover {
@@ -101,6 +103,8 @@ html {
 
 #sneer {
     margin-right: auto;
+    font-style: italic;
+    font-weight: 200;
 }
 
 #sneer a {
@@ -122,18 +126,10 @@ a:visted {
     }
     
     .picture {
-        width: 100vw;
-        height: auto;
         background-image: url(Pictures/businessCards/mysplendor_cl_invert1.png);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        flex-direction: column;
     }
 
     .menu ul li {
-        padding: 0 20px;
-        margin: 0;
         border-left: 3px solid white;
     }
     
@@ -159,11 +155,60 @@ a:visted {
         color: white;
     }
 
-    #sneer a:visted {
+    a:visted {
         color: white;
+        text-decoration: none;
+    }
+
+    #title a:hover {
+        background-color: rgba(161, 188, 206, 0.5);
     }
 
     .menu ul li:first-child {
         border-right: 3px solid white;
+    }
+}
+
+@media (max-width: 751px) and (orientation: portrait) {
+    
+    #title {
+        position: absolute;
+        margin-top: 15vh;
+        margin-left: 5vw;
+    }
+
+    #title h1 {
+        display: flex;
+        flex-direction: column;
+        font-size: 5vw;
+        font-weight: 200;
+        margin: 0.25vh 0;
+        padding: 0;
+    }
+
+    #title h1 span {
+        margin: 0;
+        padding: 0;
+    }
+    
+    #title h2 {
+        display: flex;
+        flex-direction: column;
+        font-size: 2.5vw;
+        flex-wrap: wrap;
+        margin: 0;
+        padding: 0;
+        font-weight: 200;
+    }
+    
+    #title a {
+        margin: 1vw 5vw; 
+        padding: 0; 
+        text-align: center;
+        border-radius: 10px;
+        font-weight: 200;
+        width: 20vw;
+        text-decoration: none;
+        font-size: 2vw;
     }
 }
