--- a/style.css
+++ b/style.css
@@ -41,13 +41,13 @@ html {
 
 #title h2 {
     font-size: 1.5vw;
-    margin: 0;
+    margin-left: 2vw;
     padding: 0;
     font-weight: 400;
 }
 
 #title a {
-    margin: 1vw 5vw; 
+    margin: 1vw 5.9vw; 
     padding: 0; 
     text-align: center;
     border: 2px solid black;
@@ -60,14 +60,14 @@ html {
     letter-spacing: .1px;
     box-shadow: 0 0 0 2px gainsboro;
     background-color: transparent;
-    transition: all 500ms ease-in-out;
+    /* transition: all 350ms ease-in-out; */
 }
 
 #title a:hover {
     transform: scale(1.1);
     background-color: black;
     color: white;
-    text-shadow: 1px 1px 15px rgba(20, 75, 112, 0.95);
+    /* text-shadow: 1px 1px 15px rgba(20, 75, 112, 0.95); */
     letter-spacing: 1.1px;
     border-radius: 30px;
     box-shadow: 0 0 0 5px transparent;
@@ -93,12 +93,14 @@ html {
     padding: 0 20px;
     margin: 0;
     border-left: 3px solid black;
+    transition: all 350ms ease-in-out;
 }
 
 .menu ul li:hover {
-    /* background-color: rgb(238, 235, 235); */
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: black;
     text-shadow: 1px 1px 15px rgba(20, 75, 112, 0.95);
+    color: white;
+    cursor: pointer;
 }
 
 .menu ul li:last-child {
@@ -180,6 +182,9 @@ a:visted {
 
     .menu ul li:first-child {
         border-right: 3px solid white;
+    }
+    a:visted {
+        color: white;
     }
 }
 
