--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ html {
     font-family:'Kanit', sans-serif;
 }
 
+.mobileNav {
+    display: none;
+}
+
 .main {
     position: relative;
     height: 100vh;
@@ -58,9 +62,9 @@ html {
     text-decoration: none;
     font-size: 1vw;
     letter-spacing: .1px;
-    box-shadow: 0 0 0 2px gainsboro;
+    box-shadow: 0 0 0 1px gainsboro;
     background-color: transparent;
-    /* transition: all 350ms ease-in-out; */
+    transition: all 350ms ease-in-out;
 }
 
 #title a:hover {
@@ -103,6 +107,10 @@ html {
     cursor: pointer;
 }
 
+.menu ul li a:hover {
+    color: white;
+}
+
 .menu ul li:last-child {
     border-right: 3px solid black;
 } 
@@ -130,9 +138,102 @@ html {
     padding: 0;
 }
 
+#sneer a:hover {
+    color: white;
+}
+
 a:visted {
     text-decoration: none;
     color: black;
+}
+
+@media (max-width: 780px) {
+    .menu {
+        display: none;
+    }
+
+    #mobileLinks {
+        display: none;
+        }
+
+    .mobileNav {
+        display: initial;
+        position: absolute;
+        margin: 5vw;
+        z-index: 2;
+        width: auto;
+        height: auto;
+    }
+
+    .fa-bars {
+        color: black;
+        width: 50px;
+    }
+
+    #title {
+        position: absolute;
+        margin-top: 15vh;
+        margin-left: 5vw;
+    }
+
+    #title h1 {
+        display: flex;
+        flex-direction: column;
+        font-size: 5vw;
+        font-weight: 200;
+        margin: 0.25vh 0;
+        padding: 0;
+    }
+
+    #title h1 span {
+        margin: 0;
+        padding: 0;
+    }
+    
+    #title h2 {
+        display: flex;
+        flex-direction: column;
+        font-size: 2.5vw;
+        flex-wrap: wrap;
+        margin: 0.2vh 0;
+        padding: 0;
+        font-weight: 200;
+    }
+    
+    #title a {
+        margin: 1.2vw 0.1vw; 
+        padding: 0; 
+        text-align: center;
+        border-radius: 10px;
+        font-weight: 200;
+        width: 20vw;
+        text-decoration: none;
+        font-size: 2vw;
+    }
+}
+
+@media (max-width: 426px) and (orientation: portrait) {
+    .menu {
+        display: none;
+    }
+
+    #mobileLinks {
+        display: none;
+        }
+
+    .mobileNav {
+        display: initial;
+        position: absolute;
+        margin: 5vw;
+        z-index: 2;
+        width: auto;
+        height: auto;
+    }
+
+    .fa-bars {
+        color: black;
+        width: 50px;
+    }
 }
 
 @media (prefers-color-scheme: dark) { 
@@ -186,48 +287,24 @@ a:visted {
     a:visted {
         color: white;
     }
-}
 
-@media (max-width: 751px) and (orientation: portrait) {
-    
-    #title {
-        position: absolute;
-        margin-top: 15vh;
-        margin-left: 5vw;
+    #sneer a:hover {
+        color: black;
+    }
+    .menu ul li a:hover {
+        color: white;
     }
 
-    #title h1 {
-        display: flex;
-        flex-direction: column;
-        font-size: 5vw;
-        font-weight: 200;
-        margin: 0.25vh 0;
-        padding: 0;
-    }
-
-    #title h1 span {
-        margin: 0;
-        padding: 0;
+    .menu ul li:hover {
+        background-color: white;
+        color: black;
+        cursor: pointer;
     }
     
-    #title h2 {
-        display: flex;
-        flex-direction: column;
-        font-size: 2.5vw;
-        flex-wrap: wrap;
-        margin: 0;
-        padding: 0;
-        font-weight: 200;
+    .menu ul li a:hover {
+        color: black;
     }
-    
-    #title a {
-        margin: 1vw 5vw; 
-        padding: 0; 
-        text-align: center;
-        border-radius: 10px;
-        font-weight: 200;
-        width: 20vw;
-        text-decoration: none;
-        font-size: 2vw;
+    .fa-bars {
+        color: white;
     }
 }
