--- a/style.css
+++ b/style.css
@@ -84,11 +84,14 @@ html {
 .menu {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 .menu ul {
+    height: 100%;
     list-style: none;
     display: flex;
+    align-items: center;
     justify-content: flex-end;
     font-weight: 300;
 }
