--- a/style.css
+++ b/style.css
@@ -1,38 +1,107 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,200;0,400;0,700;1,400&display=swap');
 
 html {
-    background-color: rgb(rgb(255, 255, 255));
-    font-family:'Kanit', sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: 'Kanit', sans-serif;
+    background-color: #C7BA9E;
 }
 
-.mobileNav {
+.menuMobile {
     display: none;
 }
 
-.main {
+.menu-fullsize {
+    margin-right: 50px;
+    padding: 0;
+    overflow: hidden;
+}
+
+.menu-fullsize ul {
+    height: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    font-weight: 300;
+}
+
+.menu-fullsize ul li {
+    padding: 0 20px;
+    margin: 0;
+    border-left: 3px solid #272036;
+    transition: all 200ms ease-in-out; 
+}
+
+.menu-fullsize ul li:hover {
+    background-color: #272036;
+    text-shadow: 1px 1px 15px #D24624;
+    color: #C7BA9E;
+    cursor: pointer;
+}
+
+.menu-fullsize ul li a:hover {
+    color: #C7BA9E;
+}
+
+.menu-fullsize ul li:last-child {
+    border-right: 3px solid #272036;
+} 
+
+.menu-fullsize ul li:first-child {
+    border-right: 3px solid #272036;
+}
+
+.menu-fullsize a {
+    text-decoration: none;
+    color: #272036;
+}
+
+#sneerFull {
+    margin-right: auto;
+    font-style: italic;
+    font-weight: 200;
+}
+
+#sneerFull a {
+    text-decoration: none;
+    color: #272036;
+    font-weight: 200;
+}
+
+#sneerFull a:hover {
+    color: #C7BA9E;
+}
+
+a:visited {
+    text-decoration: none;
+    color: #272036;
+}
+
+#main {
     position: relative;
     height: 100vh;
     width: auto;
     display: flex;
 }
 
-.picture {
+#main .background-image {
     width: 100vw;
     height: auto;
-    background-image: url(Pictures/businessCards/mysplendor_cl1.png);
+    background-image: url(Images/BackgroundImages/mysplendor_cl1.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* box-shadow: 5px 10px 10px 10px ; */
-    flex-direction: column;
+    z-index: 1;
 }
 
 #title {
     position: absolute;
     margin-top: 55vh;
     margin-left: 5vw;
+    color: #272036;
     display: flex;
     flex-direction: column;
+    z-index: 3;
 }
 
 #title h1 {
@@ -40,6 +109,7 @@ html {
     font-weight: 200;
     margin: 0;
     padding: 0;
+    text-shadow: 1px 1px 15px #D24624;
 }
 
 #title h2 {
@@ -47,30 +117,30 @@ html {
     margin-left: 2vw;
     padding: 0;
     font-weight: 400;
+    text-shadow: 1px 1px 15px #D24624;
 }
 
 #title a {
     margin: 1vw 5.9vw; 
     padding: 0; 
     text-align: center;
-    border: 2px solid black;
+    border: 2px solid #272036;
     border-radius: 5px;
     font-weight: 200;
     width: 20vw;
-    color: black;
+    color: #272036;
     text-decoration: none;
     font-size: 1vw;
     letter-spacing: .1px;
-    box-shadow: 0 0 0 1px gainsboro;
+    box-shadow: 0 0 0 1px #C7BA9E;
     background-color: transparent;
     transition: all 350ms ease-in-out;
 }
 
 #title a:hover {
     transform: scale(1.1);
-    background-color: black;
-    color: white;
-    /* text-shadow: 1px 1px 15px rgba(20, 75, 112, 0.95); */
+    background-color: #272036;
+    color: #C7BA9E;
     letter-spacing: 1.1px;
     border-radius: 30px;
     box-shadow: 0 0 0 5px transparent;
@@ -80,176 +150,104 @@ html {
     transform: scale(0.9);
 }
 
-.menu {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
 
-.menu ul {
-    height: 100%;
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    font-weight: 300;
-}
-
-.menu ul li {
-    padding: 0 20px;
-    margin: 0;
-    border-left: 3px solid black;
-    transition: all 350ms ease-in-out; 
-}
-
-.menu ul li:hover {
-    background-color: black;
-    text-shadow: 1px 1px 15px rgba(20, 75, 112, 0.95);
-    color: white;
-    cursor: pointer;
-}
-
-.menu ul li a:hover {
-    color: white;
-}
-
-.menu ul li:last-child {
-    border-right: 3px solid black;
-} 
-
-.menu ul li:first-child {
-    border-right: 3px solid black;
-}
-
-.menu a {
-    text-decoration: none;
-    color: black;
-}
-
-#sneer {
-    margin-right: auto;
-    font-style: italic;
-    font-weight: 200;
-}
-
-#sneer a {
-    text-decoration: none;
-    color: black;
-    font-weight: 200;
-    margin: 0;
-    padding: 0;
-}
-
-#sneer a:hover {
-    color: white;
-}
-
-a:visted {
-    text-decoration: none;
-    color: black;
-}
-
-@media (max-width: 780px) {
-    .menu {
-        display: none;
-    }
-
-    #mobileLinks {
-        display: none;
-        }
-
-    .mobileNav {
-        display: initial;
-        position: absolute;
-        margin: 5vw;
+@media (max-width: 430px) and (orientation: portrait) {
+    .menuMobile {
+        overflow: hidden;
+        background-color: #272036;
+        position: relative;
         z-index: 2;
-        width: auto;
-        height: auto;
-    }
-
-    .mobileNav .icon i {
-        color: black;
-        font-size: 50px;
-    }
-
-    #title {
-        position: absolute;
-        margin-top: 15vh;
-        margin-left: 5vw;
-    }
-
-    #title h1 {
         display: flex;
-        flex-direction: column;
-        font-size: 5vw;
-        font-weight: 200;
-        margin: 0.25vh 0;
-        padding: 0;
+        padding-right: 10px;
+        justify-content: space-between;
     }
 
-    #title h1 span {
-        margin: 0;
-        padding: 0;
+    .menuMobile h1 {
+        align-self: center;
+        color: #C7BA9E;
+        padding-left: 10px;
+        font-weight: 400;
+        text-shadow: 1px 1px 2px #D24624; 
     }
-    
-    #title h2 {
-        display: flex;
-        flex-direction: column;
-        font-size: 2.5vw;
-        flex-wrap: wrap;
-        margin: 0.2vh 0;
-        padding: 0;
-        font-weight: 200;
-    }
-    
-    #title a {
-        margin: 1.2vw 0.1vw; 
-        padding: 0; 
-        text-align: center;
-        border-radius: 10px;
-        font-weight: 200;
-        width: 20vw;
+
+    .menuMobile a {
         text-decoration: none;
-        font-size: 2vw;
+        align-self: center;
     }
-}
-
-@media (max-width: 426px) and (orientation: portrait) {
-    .menu {
+    
+    .menuMobile #menuLinks {
         display: none;
     }
 
-    .main {
-        display: flex;
+    ul {
+        list-style: none;
     }
 
-    .main .picture {
-        width: 100vw;
-        height: auto;
-        background-image: url(Pictures/businessCards/mysplendor_mobile.png);
+    .active {
+        color: #C7BA9E;
     }
 
-    .main .picture #title {
-        align-items: flex-end;
+    .menuMobile a i:active {
+        text-shadow: 2px 3px 2px #D24624;
+        transform: scale(1.1);
     }
 
-    #mobileLinks {
-        display: none;
-        }
+    .menuMobile a i {
+        font-size: 40px;
+        color: #C7BA9E;
+        padding: 10px;
+    }
 
-    .mobileNav {
-        display: flex;
-        position: absolute;
-        margin: 5vw;
+    #main .background-image {
+        position: absolute; 
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url("Images/BackgroundImages/mysplendor_mobile.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        z-index: 1;
+    }
+
+    #main #title {
+        position: relative;
+        margin-top: 125px;
+        color: #272036;
+        text-shadow: 1px 1px 1px #C7BA9E;
         z-index: 2;
-        width: auto;
-        height: auto;
     }
 
-    .mobileNav .icon i {
-        color: black;
-        font-size: 50px;
+    #main #title h1 {
+        display: none;
     }
+
+    #main #title h2 {
+        display: flex;
+        flex-direction: column;
+        font-weight: 400;
+        padding-bottom: 150px;
+    }
+
+    #main #title #main-button {
+        text-decoration: none;
+        padding: 8px 10px;
+        color: #C7BA9E;
+        text-shadow: 1px 1px 6px #D24624;  
+        background-color: #272036;      
+        border: 3px solid #C7BA9E;
+        border-radius: 40px;
+    }
+
+    #main #title #main-button:active {
+        transform: scale(0.9);
+        /* border-radius: 15px; */
+    }
+
+    #main #title #main-button:visited {
+        text-decoration: none;
+    } 
 }
 
 @media (prefers-color-scheme: dark) { 
@@ -257,70 +255,90 @@ a:visted {
         background-color: rgb(44, 44, 44);
     }
     
-    .picture {
-        background-image: url(Pictures/businessCards/mysplendor_cl_invert1.png);
-    }
-
-    .menu ul li {
-        border-left: 3px solid white;
+    .menu-fullsize ul li {
+        color: #C7BA9E;
+        text-shadow: .5px .5px 2px #1ADAA5;
+        border-left: 3px solid #C7BA9E;
     }
     
-    .menu ul li:last-child {
-        border-right: 3px solid white;
-    } 
-    
-    .menu a {
-        text-decoration: none;
-        color: white;
-    } 
-
-    #title {
-        color: white;
-    }
-
-    #title a {
-        color: white;
-        border: 2px solid white;
-    }
-
-    #sneer a {
-        color: white;
-    }
-
-    a:visted {
-        color: white;
-        text-decoration: none;
-    }
-
-    #title a:hover {
-        background-color: white;
-        color: black;
-        }
-
-    .menu ul li:first-child {
-        border-right: 3px solid white;
-    }
-    a:visted {
-        color: white;
-    }
-
-    #sneer a:hover {
-        color: black;
-    }
-    .menu ul li a:hover {
-        color: white;
-    }
-
-    .menu ul li:hover {
-        background-color: white;
-        color: black;
+    .menu-fullsize ul li:hover {
+        background-color: #C7BA9E;
+        text-shadow: 1px 1px 15px #D24624;
+        color: #272036;
         cursor: pointer;
     }
     
-    .menu ul li a:hover {
-        color: black;
+    .menu-fullsize ul li a:hover {
+        color: #272036;
     }
-    .mobileNav .icon i  {
-        color: white;
+    
+    .menu-fullsize ul li:last-child {
+        border-right: 3px solid #C7BA9E;
+    } 
+    
+    .menu-fullsize ul li:first-child {
+        border-right: 3px solid #C7BA9E;
     }
-}
+    
+    .menu-fullsize a {
+        color: #C7BA9E;
+    }
+    
+    #sneerFull a {
+        text-decoration: none;
+        color: #C7BA9E;
+        text-shadow: .5px .5px 2px #1ADAA5;
+    }
+    
+    #sneerFull a:hover {
+        color: #C7BA9E;
+    }
+    
+    a:visited {
+        text-decoration: none;
+        color: #C7BA9E;
+    }
+    
+    #main .background-image {
+        background-image: url(Images/BackgroundImages/mysplendor_cl_invert1.png);
+    }
+    
+    #title {
+        position: absolute;
+        margin-top: 55vh;
+        margin-left: 5vw;
+        color: #C7BA9E;
+    }
+    
+    #title h1 {
+        text-shadow: 1px 1px 15px #1ADAA5;
+    }
+    
+    #title h2 {
+        text-shadow: 1px 1px 15px #1ADAA5;
+    }
+    
+    #title a {
+        border: 2px solid #C7BA9E;
+        color: #C7BA9E;
+        box-shadow: 0 0 0 1px #1ADAA5;
+        text-shadow: 1px 1px 3px #1ADAA5;
+    }
+    
+    #title a:hover {
+        transform: scale(1.1);
+        background-color: #C7BA9E;
+        color: #272036;
+        text-shadow: 1px 1px 3px #272036;
+    }
+    
+    #title a:active {
+        transform: scale(0.9);
+    }
+
+    .copyright {
+        color: #C7BA9E;
+        text-align: center;
+    }
+
+ }
