--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ a:visited {
 #main .background-image {
     width: 100vw;
     height: auto;
-    background-image: url(Images/BackgroundImages/mysplendor_cl1.png);
+    background-image: url(Pictures/businessCards/mysplendor_cl1.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -150,10 +150,88 @@ a:visited {
     transform: scale(0.9);
 }
 
+.copyright {
+    color: #272036;
+    text-align: center;
+}
 
-@media (max-width: 430px) and (orientation: portrait) {
+@media (min-width: 451px) and (max-width: 660px) {
+    .menu-fullsize {
+        height: 10vh;
+        margin-right: 9vw;
+        padding: 0;
+        overflow: hidden;
+    }
+    
+    .menu-fullsize ul {
+        height: 100vh;
+    }
+    
+    .menu-fullsize ul li {
+        padding: 0 3vw;
+        margin: 0;
+        border-left: none; 
+    }
+    .menu-fullsize ul li:last-child {
+        border-right: none;
+    } 
+    
+    .menu-fullsize ul li:first-child {
+        border-right: none;
+    }
+    #main #title {
+        position: absolute;
+        margin-top: 100px;
+        margin-left: 1px;
+        color: #272036;
+        display: flex;
+        flex-direction: column;
+        z-index: 3;
+    }
+    
+    #main #title h1 {
+        display: none;
+    }
+    
+    #main #title h2 {
+        font-size: 30px;
+        padding-left: 1vw;
+        font-weight: 400;
+        text-shadow: 1px 1px 15px #D24624;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #main #title h2 #small {
+        font-size: 20px;
+        padding-left: 30px;
+    }
+
+    #main #title h2 #smaller {
+        font-size: 20px;
+        padding-left: 30px;
+    }
+    
+    #main #title a {
+        top: 400px;
+        margin-top: 80px; 
+        padding-top: 10px;
+        padding-bottom: 20px; 
+        text-align: center;
+        border-radius: 10px;
+        font-weight: 400;
+        width: 100px;
+        height: 50px;
+        text-decoration: none;
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 450px) {
     .menuMobile {
         overflow: hidden;
+        width: 100%;
+        height: 100%;
         background-color: #272036;
         position: relative;
         z-index: 2;
@@ -177,10 +255,11 @@ a:visited {
     
     .menuMobile #menuLinks {
         display: none;
-    }
-
-    ul {
         list-style: none;
+    }
+    
+    .menuMobile #menuLinks li a {
+        color: #C7BA9E;
     }
 
     .active {
@@ -198,59 +277,81 @@ a:visited {
         padding: 10px;
     }
 
+    .menu-fullsize {
+        display: none;
+        margin: 0;
+        padding: 0;
+        position: relative;
+    }
+
+    #main {
+        position: relative;
+        height: 100vh;
+        width: 99vw;
+        display: flex;
+    }
+    
     #main .background-image {
-        position: absolute; 
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-image: url("Images/BackgroundImages/mysplendor_mobile.png");
+        width: 100vw;
+        height: auto;
+        background-image: url("Pictures/businessCards/mysplendor_mobile.png");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
         z-index: 1;
     }
-
+    
     #main #title {
-        position: relative;
-        margin-top: 125px;
+        position: absolute;
+        margin-top: 100px;
+        margin-left: 1px;
         color: #272036;
-        text-shadow: 1px 1px 1px #C7BA9E;
-        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        z-index: 3;
     }
-
+    
     #main #title h1 {
         display: none;
     }
-
+    
     #main #title h2 {
+        font-size: 30px;
+        padding-left: 1vw;
+        font-weight: 400;
+        text-shadow: 1px 1px 15px #D24624;
         display: flex;
         flex-direction: column;
+    }
+
+    #main #title h2 #small {
+        font-size: 20px;
+        padding-left: 30px;
+    }
+
+    #main #title h2 #smaller {
+        font-size: 20px;
+        padding-left: 30px;
+    }
+    
+    #main #title a {
+        top: 400px;
+        margin-top: 80px; 
+        padding-top: 10px;
+        padding-bottom: 20px; 
+        text-align: center;
+        border: 2px solid #272036;
+        border-radius: 10px;
         font-weight: 400;
-        padding-bottom: 150px;
-    }
-
-    #main #title #main-button {
+        width: 100px;
+        height: 50px;
         text-decoration: none;
-        padding: 8px 10px;
-        color: #C7BA9E;
-        text-shadow: 1px 1px 6px #D24624;  
-        background-color: #272036;      
-        border: 3px solid #C7BA9E;
-        border-radius: 40px;
+        font-size: 20px;
     }
-
-    #main #title #main-button:active {
-        transform: scale(0.9);
-        /* border-radius: 15px; */
-    }
-
-    #main #title #main-button:visited {
-        text-decoration: none;
-    } 
 }
 
-@media (prefers-color-scheme: dark) { 
+
+@media (prefers-color-scheme: dark) and (min-width: 450px){ 
     html {
         background-color: rgb(44, 44, 44);
     }
@@ -300,7 +401,7 @@ a:visited {
     }
     
     #main .background-image {
-        background-image: url(Images/BackgroundImages/mysplendor_cl_invert1.png);
+        background-image: url(Pictures/businessCards/mysplendor_cl_invert1.png);
     }
     
     #title {
@@ -334,6 +435,10 @@ a:visited {
     
     #title a:active {
         transform: scale(0.9);
+    }
+
+    #sneerFull a:hover{
+        color: #272036;
     }
 
     .copyright {
