--- a/style.css
+++ b/style.css
@@ -132,7 +132,8 @@ a:visited {
     text-decoration: none;
     font-size: 1vw;
     letter-spacing: .1px;
-    box-shadow: 0 0 0 1px #C7BA9E;
+    box-shadow: 0 0 0 1px #D24624;
+    text-shadow: 1px 1px 15px #D24624;
     background-color: transparent;
     transition: all 350ms ease-in-out;
 }
